# polygenic-adaptation

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: conf.py  index.md
extract_vcfs/: README.md  Snakefile  diplo_to_haplo_vcf.py  inspect_stuff.ipynb  misc_plot_stats.py  slurmify.py  step10_filter_vcfs.py  step1_subset_gb_anno.py  step2_eigensoft_convertf_subset.py  step3_eigensoft_smartpca_subset.py  step4_plot_pcas.py  step5_filter_pca_outlier_manual.py  step6_plot_map.py  step7_plot_sample_sizes.py  step8_extract_vcfs.py  step9_extract_capture_only.py
extract_vcfs/gdc/: LICENSE  eigenstrat2vcf.py  pyEigenstrat.py
simulation_params/: EM_comparison_params.json  first_sim_params.json  normal_sim_params.json
src/polygenic_adaptation/: SLURM_simple.py  Snakefile  __init__.py  analyze_grids.py  analyze_multiple_slim.py  analyze_multiple_slim_err.py  analyze_multiple_slim_regression.py  analyze_real_data.py  analyze_slim_grid.py  ash_Snakefile  collect_gvars.py  first_slim_script.slim  generate_constants.py  hmm_core.py  investigating_grids.py  javac.20250531_233850.args  javac.20250531_234420.args  meta_test_EM.sh  perform_gwaslim.py  plot_density.py  polyutil.py  pyproject.toml  randostuff.py  run_hmm.py  run_hmm_fixed_input.py  run_hmm_fixed_input.py.lprof  sample_slim.py  shrink_ukbb_sumstats.py  simulate_static.py  slim_Snakefile  slim_matched_Snakefile  subset_and_prune.py  ukbb_ashr_results.py  ukbb_ashr_testing.py  ukbb_exploration.py  ukbb_export.py
src/polygenic_adaptation/simple/: config.yaml
tests/: test_hmm.py  test_package.py
